# qml-shader-effects

./: CMakeLists.txt  LICENSE  README.md
example/: CMakeLists.txt  main.cpp  main.qml  qml.qrc
src/: plugin.cpp
src/qml_files/: qml.qrc
src/qml_files/ShaderEffects/: ColorOverlayShader.qml  DropShadowShader.qml  OpacityMaskShader.qml  ShaderSourceProxy.qml  ShadowShader.qml  colorOverlayShader.frag  dropShadowShader.frag  dropShadowShader.vert  opacityMaskShader.frag  qmldir
